# contorno

./: CMakeLists.txt  Makefile  README.md
examples/: example.c
include/: contorno.h  symbolvisibility.h
src/: dllmain.c  fileutility.c  memorymanager.c  module.c  object.c  stringutility.c
